apps/metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /metabase-data
              name: metabase-storage
      volumes:
        - name: metabase-storage
          emptyDir: {}
