apps/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: apps
spec:
  type: NodePort
  selector:
    app: metabase
  ports:
    - port: 3000
      targetPort: 3000
