apps/metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    cert-manager.io/cluster-issuer: root-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - metabase.home
      secretName: metabase-tls
  rules:
    - host: metabase.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase
                port:
                  number: 3000
